@@ -3,7 +3,10 @@ English Dolibarr ChangeLog
 ***** ChangeLog for 3.1 compared to 3.0 *****
 For users:
 - New: Can add information on current user on odt generation
+- New: Prefix on third party is not used by default. Hidden option
+       SOCIETE_USEPREFIX can restore old feature.
 - New: Standing orders module use bank account from banks module
+- New: Ask password when creating a user from a contact
 
 For developers:
 - New: External modules can add their menu manager
